Fix city field needs to wrap

--- a/schmodel-registration-frontend/src/app/pages/apply-for-jobs/components/event/event.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/apply-for-jobs/components/event/event.component.scss
@@ -14,29 +14,20 @@ $model-img-size: 120px;
       font-weight: normal;
       margin: 0;
       line-height: 16px;
-      padding: 15px 12px;
+      padding: 7px 10px;
 
       span {
-        white-space: nowrap;
+        display: block;  
         color: white;
+        font-size: 13px;
 
         &:nth-of-type(1) {
-          display: block;
-          font-size: 24px;
+          font-size: 20px;
           line-height: 17px;
           margin-bottom: 4px;
         }
-        &:nth-of-type(2) {
-          font-size: 13px;
-          white-space: inherit;
-          word-wrap: break-word !important;
-        }
         &:nth-of-type(3) {
-          font-size: 13px;
           font-weight: 600;
-        }
-        &:nth-of-type(4) {
-          font-size: 13px;
         }
       }
 
