--- a/schmodel-registration-frontend/src/app/pages/event-calendar/event-calendar.component.scss
+++ b/schmodel-registration-frontend/src/app/pages/event-calendar/event-calendar.component.scss
@@ -101,32 +101,22 @@ $formula-logo-height: 70px;
 				font-weight: normal;
 				margin: 0;
 				line-height: 16px;
-				padding: 7px 12px;
+				padding: 7px 10px;
 
 				span {
-					white-space: nowrap;
+					display: block;
 					color: white;
+					font-size: 13px;
 
 					&:nth-of-type(1) {
-						display: block;
 						font-size: 20px;
 						line-height: 17px;
 						margin-bottom: 4px;
 					}
-					&:nth-of-type(2) {
-						font-size: 13px;
-						white-space: inherit;
-						word-wrap: break-word !important;
-					}
 					&:nth-of-type(3) {
-						font-size: 13px;
 						font-weight: 600;
 					}
-					&:nth-of-type(4) {
-						font-size: 13px;
-					}
 				}
-
 				b {
 					font-weight: 800;
 				}
@@ -191,61 +181,3 @@ $formula-logo-height: 70px;
 		}
 	}
 }
-
-// @media screen and (min-width: 320px) and (max-width: 414px) {
-	
-// 	.info-bar {
-// 		img {
-// 			width: 100px !important;
-// 		}
-// 	}
-// 	.section--talent {
-
-// 		.talent-calendar {
-// 			width: 100px !important;
-
-// 			.info-values {
-// 				padding: 10px 9px !important;
-
-// 				span {
-// 					&:nth-of-type(1) {
-// 						font-size: 18px !important;
-// 						line-height: 16px !important;
-// 					}
-// 				}
-// 			}
-// 		}
-	
-// 		.talent-content {
-// 			.info-item {
-// 				padding-right: 6px !important;
-				
-// 				p {
-// 					span {
-// 						margin-left: 3px;
-// 						font-size: 9px !important;
-// 						vertical-align: baseline !important;
-// 					}
-// 				}
-				
-// 			}
-// 		}
-// 	}
-
-// 	.event-sch-guest {
-// 		flex: none;
-// 		width: 153px !important;
-
-// 		.talent-content {
-// 			.info-item {
-// 				padding-right: 13px !important;
-// 				p {
-// 					span {
-// 						font-size: 20px !important;
-// 						vertical-align: -webkit-baseline-middle !important;
-// 					}
-// 				}		
-// 			}
-// 		}
-// 	}
-// }
